--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1024,6 +1024,12 @@ nav {
                         width: 150px;
                         margin-bottom: 0;
                     }
+                    .verify {
+                        width: 20px;
+                        height: 30px;
+                        margin: 3px 5px 0;
+                        line-height: 1;
+                    }
                 }
             }
         }
